lang/tests/compile_fail/duplicate_op_arg.stderr
error: duplicate arg `authority` — each arg may only appear once
  --> tests/compile_fail/duplicate_op_arg.rs:12:57
   |
12 |     #[account(token(mint = mint, authority = authority, authority = mint))]
   |                                                         ^^^^^^^^^

error[E0432]: unresolved import `quasar_spl`
 --> tests/compile_fail/duplicate_op_arg.rs:3:5
  |
3 | use quasar_spl::{TokenProgram, *};
  |     ^^^^^^^^^^ use of unresolved module or unlinked crate `quasar_spl`
  |
  = help: if you wanted to use a crate named `quasar_spl`, use `cargo add quasar_spl` to add it to your `Cargo.toml`
